[gd_scene load_steps=2 format=3 uid="uid://c0066qlmgb85w"]

[ext_resource type="Script" uid="uid://dbmtucw7ckeym" path="res://components/mele_attack_component.gd" id="1_krhl6"]

[node name="MeleAttackComponent" type="Area2D"]
script = ExtResource("1_krhl6")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
